analises por lea

--- a/exp-analise.tex
+++ b/exp-analise.tex
@@ -101,6 +101,8 @@ Para simular o primeiro caso optou-se pela seleção do algoritmo com
 a melhor acurácia passiva para cada base.
 No segundo caso, o algoritmo com a acurácia passiva mediana foi considerado
 suficientemente representativo dos demais.
+Uma vantagem adicional desses dois novos cenários é a possibilidade de análise unificada,
+sem a separação por aprendiz feita na Seção \ref{}.
 % nas bases como um todo, o efeito esperado é aproximar-se do aleatório, mas
 % sem seu incoveniente de escolher o pior algoritmo para algumas bases
 
