--- a/experimentos.tex
+++ b/experimentos.tex
@@ -107,7 +107,7 @@ seu desempenho ser superior ao da Ent.
 O grupo reduzido de estratégias é apresentado na Tabela \ref{stratDistsRedux}.
 É possível notar que a adoção da distância de Mahalanobis (últimas três
 colunas da tabela) confere o maior grau de diversidade dentre todas as estratégias.
-Apesar dessa propriedade,
+Apesar dessa particularidade,
 não é do conhecimento do autor a existência de trabalhos que empreguem essa
 medida de distância.
 
