--- a/introducao.tex
+++ b/introducao.tex
@@ -27,6 +27,8 @@ já está construído.
 Consequentemente, a escolha do processo de amostragem,
 denominado \textit{aprendizado ativo},
 precede a determinação do algoritmo de aprendizado.
+\ano{isso contradiz o cenário em que o aprendiz é definido de antemão,
+que é parte dos experimentos}
 
 Da mesma forma que existe o problema da escolha do algoritmo de aprendizado
 mais apropriado, existe o problema da escolha da melhor estratégia de
